@@ -1,5 +1,12 @@
 # $Id$
 
+2008-08-28	Konstantin V. Arkhipov
+
+	* core/Form/Primitives/PrimitiveEnumeration.class.php: now tries to
+	preserve type for integer values.
+
+	* core/Types/Scalar.class.php: new type introduced.
+
 2008-08-27	Vladlen Y. Koshelev
 
 	* core/Form/Primitives/PrimitiveClass.class.php,
